RESOLVED FIXED167834
Playback stalls when a SourceBuffer append causes frame eviction
https://bugs.webkit.org/show_bug.cgi?id=167834
Summary Playback stalls when a SourceBuffer append causes frame eviction
Jer Noble
Reported 2017-02-04 01:35:36 PST
Playback stalls when a SourceBuffer append causes frame eviction
Attachments
Patch (82.61 KB, patch)
2017-02-04 01:59 PST, Jer Noble
no flags
Patch (82.48 KB, patch)
2017-02-04 02:04 PST, Jer Noble
no flags
MediaTime-pre.txt (409 bytes, text/plain)
2017-02-04 02:06 PST, Jer Noble
no flags
MediaTime-post.txt (402 bytes, text/plain)
2017-02-04 02:06 PST, Jer Noble
no flags
MSERemoveCodedFrames-pre.txt (1.13 KB, text/plain)
2017-02-04 02:07 PST, Jer Noble
no flags
MSERemoveCodedFrames-post.txt (1.11 KB, text/plain)
2017-02-04 02:07 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-04 01:49:34 PST
Jer Noble
Comment 2 2017-02-04 01:59:25 PST
WebKit Commit Bot
Comment 3 2017-02-04 02:02:01 PST
Attachment 300611 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebCore/SampleMap.cpp:51: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebCore/SampleMap.cpp:64: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebCore/SampleMap.cpp:69: Missing space inside { }. [whitespace/braces] [5] ERROR: Tools/TestWebKitAPI/Tests/WebCore/SampleMap.cpp:98: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: PerformanceTests/MediaTime/main.cpp:26: Streams are highly discouraged. [readability/streams] [3] ERROR: PerformanceTests/MediaTime/main.cpp:27: Alphabetical sorting problem. [build/include_order] [4] ERROR: PerformanceTests/MediaTime/main.cpp:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: PerformanceTests/MediaTime/main.cpp:51: sq_sum is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: PerformanceTests/MediaTime/main.cpp:77: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] ERROR: PerformanceTests/MediaTime/main.cpp:76: Missing space before ( in switch( [whitespace/parens] [5] ERROR: Source/WTF/wtf/MediaTime.cpp:389: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 11 in 21 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 4 2017-02-04 02:04:27 PST
Jer Noble
Comment 5 2017-02-04 02:06:00 PST
Created attachment 300613 [details] MediaTime-pre.txt
Jer Noble
Comment 6 2017-02-04 02:06:47 PST
Created attachment 300614 [details] MediaTime-post.txt
Jer Noble
Comment 7 2017-02-04 02:07:28 PST
Created attachment 300615 [details] MSERemoveCodedFrames-pre.txt
Jer Noble
Comment 8 2017-02-04 02:07:42 PST
Created attachment 300616 [details] MSERemoveCodedFrames-post.txt
Jer Noble
Comment 9 2017-02-04 02:09:51 PST
Performance testing shows a 250% speed increase in comparing uniform MediaTime values (see MediaTime-pre/post.txt) and and 150% speed increase in appending and removing media data from SourceBuffers.
WebKit Commit Bot
Comment 10 2017-02-06 13:50:55 PST
Comment on attachment 300612 [details] Patch Clearing flags on attachment: 300612 Committed r211746: <http://trac.webkit.org/changeset/211746>
WebKit Commit Bot
Comment 11 2017-02-06 13:50:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.